	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce {mainrepo} attribute; "Find open bugs" only for those, see
	  http://developer.berlios.de/bugs/?func=detailbug&bug_id=19160&
	  group_id=11597
	- Introduce OMIT_EXPAND and <{colli,}use0> attributes to omit output of
	  USE_EXPAND variables: http://bugs.gentoo.org/show_bug.cgi?id=489306
	- Let --version output only version number
	- Use constexpr for some constants (if supported by dialect, of course)
	- Use gettext-0.18.3: allows to specify GNU sed
	- Remove --with-nongnu-cxx (no kludges needed anymore for current clang
	  and/or ccache; it is now the task of the user to export appropriate
	  CCACHE_CPP2 or CXXFLAGS if he needs them for older versions.)
	  This fixes http://bugs.gentoo.org/show_bug.cgi?id=455078
	- Remove --enable-quickcheck (makes no sense without manual distinction
	  of compilers which was just removed)
	- Dump /usr/bin/env shebangs. Thanks to SteveL for convincing me.
	  Introduce --with{,out}-sh-shebang for overriding if necessary
	- Code cleanup: Pass Google's current cpplint-3.274_p114 with braces,
	  avoid default arguments, add more typedefs, put some member
	  functions into separate file, standard reference syntax Type&

*eix-0.29.6
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- --format now overrides all format related options/variables like
	  e.g. FORMAT or DEFAULT_FORMAT. In contrast, without --format, which
	  of the FORMAT* variable takes effect still depends on DEFAULT_FORMAT.
	- --format-verbose and --format-compact have been removed:
	  Use --format or set FORMAT_{VERBOSE,COMPACT} instead.
	- New option -N (--normal) instead of letting -c or -v be toggling
	- Fix: Do not cut rest of dependency strings after ${DEPEND}/${RDEPEND}
	  (Regression of eix-0.29.5)
	- Avoid strcasecmp() which is not in C++ standard and unspecified
	  outside POSIX locale. Also be more tolerant (match substrings only).