@@ -110,12 +110,12 @@ do	case ${opt} in
 	c)	CalcLaymanMake -c "${OPTARG}";;
 	A)	PushLaymanMake "${OPTARG}";;
 	C)	ClearLaymanMake;;
-	H)	statusline=false
-		export NOSTATUSLINE=true;;
+	H)	statusline=false;;
 	*)	Usage 0;;
 	esac
 done
 [ ${OPTIND} -le 1 ] || shift `Expr ${OPTIND} - 1`
+${statusline} || export NOSTATUSLINE=true;;
 
 GetOverlays() {
 	set -f
