@@ -52,6 +52,7 @@
 #include "portage/set_stability.h"
 #include "portage/vardbpkg.h"
 #include "search/algorithms.h"
+#include "search/packagetest.h"
 #include "search/matchtree.h"
 #include "various/drop_permissions.h"
 #include "various/cli.h"
@@ -67,6 +68,7 @@ using std::cerr;
 using std::cout;
 using std::endl;
 
+static void dump_help();
 static bool opencache(Database *db, const char *filename, const char *tooltext) ATTRIBUTE_NONNULL_;
 static bool print_overlay_table(PrintFormat *fmt, DBHeader *header, PrintFormat::OverlayUsed *overlay_used) ATTRIBUTE_NONNULL((1, 2));
 static void parseFormat(const char *sourcename, const char *content) ATTRIBUTE_NONNULL_;
@@ -75,12 +77,11 @@ static void setup_defaults(EixRc *rc, bool is_tty) ATTRIBUTE_NONNULL_;
 static bool is_current_dbversion(const char *filename, const char *tooltext) ATTRIBUTE_NONNULL_;
 static void print_wordvec(const WordVec& vec);
 static void print_unused(const string& filename, const string& excludefiles, const eix::ptr_list<Package>& packagelist, bool test_empty);
+static void print_removed(const string& dirname, const string& excludefiles, const eix::ptr_list<Package>& packagelist);
 inline static void print_unused(const string& filename, const string& excludefiles, const eix::ptr_list<Package>& packagelist);
 inline static void print_unused(const string& filename, const string& excludefiles, const eix::ptr_list<Package>& packagelist) {
 	print_unused(filename, excludefiles, packagelist, false);
 }
-
-static void print_removed(const string& dirname, const string& excludefiles, const eix::ptr_list<Package>& packagelist);
 
 /** Show a short help screen with options and commands. */
 static void dump_help() {
@@ -904,8 +905,9 @@ int run_eix(int argc, char** argv) {
 	}
 
 	format->set_marked_list(marked_list);
-	if(overlay_mode != mode_list_used_renumbered)
+	if(overlay_mode != mode_list_used_renumbered) {
 		format->set_overlay_translations(NULLPTR);
+	}
 	bool need_overlay_table(false);
 	PrintFormat::OverlayUsed overlay_used(header.countOverlays(), false);
 	format->set_overlay_used(&overlay_used, &need_overlay_table);
@@ -959,9 +961,14 @@ int run_eix(int argc, char** argv) {
 		}
 	}
 	switch(overlay_mode) {
-		case mode_list_all:  need_overlay_table = true;  break;
-		case mode_list_none: need_overlay_table = false; break;
-		default: break;
+		case mode_list_all:
+			need_overlay_table = true;
+			break;
+		case mode_list_none:
+			need_overlay_table = false;
+			break;
+		default:
+			break;
 	}
 	PrintFormat::OverlayTranslations overlay_num(header.countOverlays(), 0);
 	if(overlay_mode == mode_list_used_renumbered) {
